p8/tests/t303.err
Semantic error on line 7: The animation block's parameter does not match the parameter specified in the forward statement.
