p8/tests/t303.gpl
// type of parameter in forward does not match that in block declaration
// Error::ANIMATION_PARAM_DOES_NOT_MATCH_FORWARD
//    "The animation block's parameter does not match..."

forward animation bounce(rectangle cur_rectangle);

animation bounce(circle cur_rectangle)
{
}
